tests/yamls/busybox-sleep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PLACEHOLDER
  labels:
    app: PLACEHOLDER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: PLACEHOLDER
  template:
    metadata:
      labels:
        app: PLACEHOLDER
    spec:
      containers:
        - name: busybox
          image: quay.io/rhacs-eng/qa-multi-arch:busybox
          command: ["sh", "-c", "sleep 3600"]
