tests/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  app: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
