tests/yamls/host-exec-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: PLACEHOLDER
  namespace: default
spec:
  hostPID: true
  containers:
    - name: nsenter
      image: quay.io/rhacs-eng/qa-multi-arch:busybox
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
      volumeMounts:
        - name: host-root
          mountPath: /host
  volumes:
    - name: host-root
      hostPath:
        path: /
