tests/yamls/list-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    app: nginx
  spec:
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - name: nginx
          image: nginx
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
