tests/yamls/multi-container-pod.yaml
# Will be used within roxctl_verification.sh.
# Contains a Pod with multiple containers.
# Note: pods_test and container_instances_test depend on this.
# Images are from quay.io/rhacs-eng to avoid Docker Hub rate limits (see qa-tests-backend/scripts/images-to-prefetch.txt)
apiVersion: v1
kind: Pod
metadata:
  name: end-to-end-api-test-pod-multi-container
  namespace: default
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: 1st
      image: quay.io/rhacs-eng/qa-multi-arch-nginx:latest
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
    - name: 2nd
      image: quay.io/rhacs-eng/qa-multi-arch-busybox:latest
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: html
          mountPath: /html
      command: ["/bin/sh", "-c"]
      args:
        - while true; do
          date >> /html/index.html;
          sleep 1;
          done
