tests/yamls/pod.yaml
# Will be used within roxctl_verification.sh.
# Contains a Pod resource.
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
